# medical-pdf-extractor

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOY_NOTE.md  LOG_ROTATION_SETUP.md  MEDICAL_OPTIMIZATION_LOG.md  OPTIMIZATION_COMPLETED.md  README.md  VERSION_LOG.md  ab_test_classifier.py  ab_test_quote.py  adaptive_extractor.py  analyze_v714.py  batch_classify_v5.py  batch_evaluate.py  batch_evaluate_vllm.py  batch_test_20.py  batch_test_and_evaluate.py  batch_test_concurrent.py  batch_test_v4.py  batch_test_v5.py  batch_test_v5_fixed.py  batch_test_v6.py  batch_test_v7.py  batch_test_v716.py  batch_test_v716_robust.py  batch_test_v720_ab20.py  batch_test_v720_ab5.py  batch_test_v79.py  debug_gpt.py  debug_v713.py  docker-compose.yml  dynamic_fewshot_extractor.py  eval_results  eval_results_vllm  evaluate_with_gpt52.py  evaluate_with_referenced_pages.py  extract_sample_output.json  extraction_cache.db  fewshot_final_results.json  (+75 more)
configs/: logging.yaml
deploy/docker/: Dockerfile
deploy/vllm/: start_ocr.ps1  (+5 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  OPTIMIZATION_ROADMAP.md  PROJECT_OVERVIEW.md  QUICKSTART.md  USAGE_GUIDE.md
extractors_versioned/: GUIDELINE_extractor_v4.md  GUIDELINE_extractor_v5.md  GUIDELINE_extractor_v6.md  OTHER_extractor_v2.md  OTHER_extractor_v3.md  OTHER_extractor_v4.md  REVIEW_extractor_v1.md  REVIEW_extractor_v2.md  VERSION_LOG.md
fewshot_samples/: GUIDELINE_sample.json  OTHER_sample.json  REVIEW_sample.json  all_samples.json
release_summarizer_v7.11/: CHANGELOG.md  README.md  medical_summarizer_v7_11.py  requirements.txt
release_summarizer_v7.16/: CHANGELOG.md  README.md  evaluate_summarizer.py
scripts/: batch_test.py
test_results_v73/: evaluations.json  extraction_results.json  test_report_v73.md
test_results_v74/: evaluations.json  extraction_results.json
tests/: conftest.py  test_insufficient_content_422.py
(+45 files in other folders)
